# xml_parser

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  config.py  config.yaml  docker-compose.yaml  exnode_exporter.spec  gunicorn.conf.py  main.py  parser.py  parser_selenium.py  pyproject.toml  rates copy.xml  render.yaml  request-exportxml.xml  requirements.txt  server.py  xml_generator.py
src/: __init__.py  config.py  exporter_xml.py  fetcher.py  normalizer.py  parser.py  service.py  utils.py
tests/: __init__.py  test_config.py  test_exporter.py  test_normalizer.py  test_parser.py  test_utils.py
