[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exnode-rate-exporter"
version = "1.0.0"
description = "Production-ready rate exporter for exnode.ru exchangers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["exchange", "rates", "exnode", "bestchange", "xml", "exporter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
html = ["beautifulsoup4>=4.12.0"]
xsd = ["lxml>=4.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]
build = ["pyinstaller>=5.0.0"]
all = [
    "exnode-rate-exporter[html,xsd,dev,build]"
]

[project.scripts]
exnode-exporter = "src.service:main"

[project.urls]
Homepage = "https://github.com/yourname/exnode-rate-exporter"
Documentation = "https://github.com/yourname/exnode-rate-exporter#readme"
Repository = "https://github.com/yourname/exnode-rate-exporter.git"
Issues = "https://github.com/yourname/exnode-rate-exporter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
